<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidVIQ</string>
    <string name="vehicle">车辆</string>
    <string name="extracted_licence_image">提取出的车牌图像</string>
    <string name="setup">设置</string>
    <string name="view">查看</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="create">创建</string>
    <string name="delete_confirm">删除确认</string>
    <string name="delete_ok">删除成功</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="comma">,</string>
    <string name="smp_licence">鄂A12345</string>
    <string name="smp_name">木子李</string>
    <string name="smp_note">未缴停车费</string>
    <string name="smp_phone">13667147388</string>
    <string name="smp_time">2012–04–20 16:52:18</string>
    <string name="smp_place">湖北省武汉市青山区武汉理工大学</string>
    <string name="smp_relative_time">35分钟前</string>
    <string name="smp_type">A1</string>
    <string name="smp_vin">LSGPC52U7AF127561</string>
    <string name="smp_gender">男</string>
    <string name="smp_birth">1989-11</string>
    <string name="smp_driving_licence">371322198701202314</string>
    <string name="smp_rowid">1</string>
    <string name="call_owner">联系车主</string>
    <string name="vehicle_info_list">车辆信息库</string>
    <string name="vehicle_query_list">车辆登记单</string>
    <string name="vehicle_info_list_empty">车辆数据列表为空</string>
    <string name="vehicle_query_list_empty">车辆查询/登记列表为空</string>
    <string name="query_method">车牌号输入方式</string>
    <string name="query_method_summary">选择车牌号输入方式：拍摄车牌照片（相机），选择车牌照片（图库），手工输入</string>

    <string-array name="entries_query_method">
        <item>拍摄车牌照片</item>
        <item>选择车牌照片</item>
        <item>手工输入</item>
    </string-array>

    <string name="take_licence_image">拍摄车牌照片</string>
    <string name="select_licence_image">选择车牌照片</string>
    <string name="input_licence_number">手工输入</string>
    <string name="edit_vehicle">编辑车辆</string>
    <string name="view_vehicle">查看车辆</string>
    <string name="preference">首选项</string>
    <string name="no_phone_found">找不到电话号码</string>
    <string name="quick_search">快速查找</string>
    <string name="camera">相机</string>
    <string name="gallary">图库</string>
    <string name="query_vehicle">查询车辆</string>
    <string name="licence_input">照片识车</string>
    <string name="any_text">输入任一已知信息进行过滤</string>
    <string name="smp_matches">50</string>
    <string name="copy_licence_number">复制车牌号</string>
    <string name="copy_owner_phone_number">复制车主电话号码</string>
    <string name="copy_vin">复制车架号</string>
    <string name="copy_owner_driving_licence">复制车主驾照号</string>
    <string name="copy_note">复制备注</string>
    <string name="copy_all">复制全部</string>
    <string name="copy_owner_name">复制车主姓名</string>
    <string name="send_vehicle_info">短信发送车辆信息</string>
    <string name="copy_time">复制登记时间</string>
    <string name="copy_place">复制登记地点</string>
    <string name="sms_all">短信发送全部</string>
    <string name="copy">复制</string>
    <string name="copy_owner_gender_birth">复制车主姓别、出生年月</string>
    <string name="item_view">查看车辆</string>
    <string name="info_edit">编辑车辆信息</string>
    <string name="query_edit">编辑登记记录</string>
    <string name="vehicle_image">车辆图片</string>
    <string name="licence">车牌号</string>
    <string name="type">车型</string>
    <string name="vin">车架号</string>
    <string name="name">车主姓名</string>
    <string name="phone">车主电话</string>
    <string name="gender">车主性别</string>
    <string name="birth">车主生日</string>
    <string name="driving_licence">车主驾照号</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="note">备注</string>
    <string name="image">车辆照片</string>
    <string name="touch_to_new">触摸更换照片</string>
    <string name="no_cnl">语言包cnl.traineddata不存在！</string>
    <string name="vehicle_query_system">车辆查询系统</string>
    <string name="add_to_vehicle_info_list">增加至车辆信息库</string>
    <string name="shake_to_query">摇一摇，快速查询/登记车辆信息</string>
    <string name="shakeable">摇一摇</string>
    <string name="saved">已保存</string>
    <string name="save">保存</string>
    <string name="revert">重置</string>
    <string name="place">地点</string>
    <string name="fast_check">登记该车</string>
    <string name="time">时间</string>
    <string name="edit_vehicle_info">编辑车辆信息</string>
    <string name="edit_vehicle_query">编辑车辆登记</string>
    <string name="palm_vehicle_query_system">照片识车</string>
    <string name="check_vehicle">查询/登记车辆</string>
    <string name="input_licence_here">在此直接输入车牌号</string>
    <string name="check_ok">登记成功，已转至查看车辆</string>
    <string name="vehicle_info">车辆信息</string>
    <string name="vehicle_query">车辆登记</string>
    <string name="send_vehicle_query">短信发送该登记记录</string>

</resources>