<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_view"
        android:title="@string/view">
    </item>
    <item
        android:id="@+id/menu_edit"
        android:title="@string/edit">
    </item>
    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete">
    </item>
    <item
        android:id="@+id/menu_call_owner"
        android:title="@string/call_owner">
    </item>
    <item
        android:id="@+id/menu_sms_all"
        android:title="@string/send_vehicle_info">
    </item>
    <item
        android:id="@+id/menu_copy"
        android:title="@string/copy">
        <menu>
            <item
                android:id="@+id/menu_copy_licence_number"
                android:title="@string/copy_licence_number">
            </item>
            <item
                android:id="@+id/menu_copy_vin"
                android:title="@string/copy_vin">
            </item>
            <item
                android:id="@+id/menu_copy_owner_name"
                android:title="@string/copy_owner_name">
            </item>
            <item
                android:id="@+id/menu_copy_owner_phone_number"
                android:title="@string/copy_owner_phone_number">
            </item>
            <item
                android:id="@+id/menu_copy_owner_gender_birth"
                android:title="@string/copy_owner_gender_birth"/>
            <item
                android:id="@+id/menu_copy_owner_driving_licence"
                android:title="@string/copy_owner_driving_licence">
            </item>
            <item
                android:id="@+id/menu_copy_note"
                android:title="@string/copy_note">
            </item>
            <item
                android:id="@+id/menu_copy_all"
                android:title="@string/copy_all">
            </item>
        </menu>
    </item>

</menu>