<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/vehicle_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/vehicle"
        android:src="@drawable/vehicle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/licence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/smp_licence"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/rowid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smp_rowid" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smp_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comma"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smp_phone"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smp_time"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comma"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/relative_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smp_relative_time"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <TextView
            android:id="@+id/place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/smp_place"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/smp_note"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</LinearLayout>