<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fastScrollEnabled="true" />

        <TextView
            android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_info_list_empty" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_query_list" />

        <Button
            android:id="@+id/quick_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quick_search" />

        <Button
            android:id="@+id/new_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:text="@string/check_vehicle"/>
    </LinearLayout>
</LinearLayout>