<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:stretchColumns="1" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/touch_to_new"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:visibility="invisible" />
            </LinearLayout>

            <ImageView
                android:id="@+id/vehicle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/vehicle_image" />

            <requestFocus />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/licence"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/licence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters" >

                <requestFocus />
            </EditText>
        </TableRow>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:inputType="datetime"/>
        </TableRow>

        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:inputType="text|textPostalAddress"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:gravity="top|left"
                android:inputType="text" />
        </TableRow>
    </TableLayout>

</ScrollView>